--- a/src/styles/Profile.css
+++ b/src/styles/Profile.css
@@ -26,6 +26,7 @@ section {
   gap: 5rem;
   height: 80vh;
   margin-top: 10rem;
+  margin-bottom: 5rem;
 }
 
 .section__text {
